# vix

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml
docs/: protocol.md
migrations/: 001_initial.sql  002_room_code.sql
public/: app.js  docs.html  index.html  stats.html  stats.js  styles.css
scripts/: build.sh  check.sh  deploy_check.sh  find_free_port.sh
src/: GameServer.cpp  GameServer.hpp  Persistence.cpp  Persistence.hpp  Player.hpp  Protocol.cpp  Protocol.hpp  Utils.cpp  Utils.hpp  Validation.cpp  Validation.hpp  World.cpp  World.hpp  main.cpp
systemd/: vix-arena.service.example
tests/: unit_tests.cpp
